--- a/package.json
+++ b/package.json
@@ -8,10 +8,29 @@
   "keywords": [
     "babel-plugin"
   ],
+  "scripts": {
+    "build": "npm run clear && node_modules/.bin/babel src --out-dir lib",
+    "clear": "rimraf lib"
+  },
   "dependencies": {
     "babel-runtime": "^6.0.0"
   },
   "devDependencies": {
-    "babel-helper-plugin-test-runner": "^6.8.0"
+    "babel-cli": "^6.16.0",
+    "babel-helper-plugin-test-runner": "^6.8.0",
+    "babel-plugin-syntax-flow": "^6.13.0",
+    "babel-plugin-transform-flow-strip-types": "^6.14.0",
+    "babel-preset-es2015": "^6.16.0",
+    "rimraf": "^2.5.4"
+  },
+  "babel": {
+    "comments": false,
+    "presets": [
+      "es2015"
+    ],
+    "plugins": [
+      "syntax-flow",
+      "transform-flow-strip-types"
+    ]
   }
 }
